Closed Bug 612439 Opened 14 years ago Closed 14 years ago

Linux-deep compile failure in nanojit

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
Q3 11 - Serrano

People

(Reporter: jsudduth, Assigned: rreitmai)

Details

Attachments

(1 file)

There is a compile failure in linux-deep:

/home/build/buildbot/tamarin-redux/linux-deep/repo/core/AvmCore.cpp: In static member function ‘static int avmplus::AvmCore::integer_d(double)’:
/home/build/buildbot/tamarin-redux/linux-deep/repo/core/AvmCore.cpp:4179: error: comparison between signed and unsigned integer expressions
/home/build/buildbot/tamarin-redux/linux-deep/repo/core/../nanojit/Nativei386.h: At global scope:
/home/build/buildbot/tamarin-redux/linux-deep/repo/core/../nanojit/Nativei386.h:167: error: ‘nanojit::ScratchRegs’ defined but not used
/home/build/buildbot/tamarin-redux/linux-deep/repo/core/../nanojit/Nativei386.h:170: error: ‘nanojit::AllowableByteRegs’ defined but not used

There are more logs here;

http://tamarin-builds.mozilla.org/tamarin-redux/builders/linux-deep/builds/19
Flags: flashplayer-qrb?
is this because we're using different warnings or a different version of GCC?  even the main linux build could catch these, maybe.

AvmCore.cpp:4179 is

  int intval = ...
  if (intval != 0x8000000)

so a simple cast would easily fix it.  hg annotate points to this changeset:

changeset:   5494:c9c586e0b08d
user:        Werner Sharp (wsharp@adobe.com)
date:        Thu Nov 04 12:13:53 2010 -0700
summary:     bug 608801.  remove real2int.  (r=stejohns)
(In reply to comment #1)
> is this because we're using different warnings or a different version of GCC? 
> even the main linux build could catch these, maybe.

Wonder if this is a new warning in 4.3.3? The linux32 main build is using 4.2.1 and the main linux64 build is using 4.3.2
Possibly.  These should be trivial fixes - the best thing to do is for the person with access to the target machine to create a patch and post for review.

As followup, can the main build to be updated to the newest/strictest GCC, so we catch trivial problems sooner?
Assigning to myself to drive closure.
Assignee: nobody → jsudduth
Turns out the AvmCore.cpp part is easy to fix but the Nativei386.h part will require effort from someone familiar with nanojit. Reassigning to Rick.

As for the question in comment 3 about updating the main builders please see bug 614059.
Assignee: jsudduth → rreitmai
Flags: flashplayer-qrb?
Flags: flashplayer-triage+
Flags: flashplayer-qrb+
Priority: -- → P3
Target Milestone: --- → flash10.x - Serrano
Status: NEW → ASSIGNED
Rick, there is talk of a merge to mainline this week.  I assume complication failures are blockers...
What is blocking?  I see a failure with 'no-jit' configuration.  As none of our products use this config does this really block anything?   

I agree it would be nice to clean up eventually.
There are two other failing steps, compiling and testing:

ReleaseDebugger-air
Release-system-malloc

All failing in same fashion.
Attachment #496132 - Flags: review? → review?(rreitmai)
Comment from Rick via email:
>>>It looks like this requires not only fixes in tamarin but also a nanojit merge meaning that its most likely not going to be fixed and merged by tomorrow.
Why is a high priority, it looks like these are builds that exclude the JIT?
Comment on attachment 496132 [details] [diff] [review]
add a cast to fix compiler warning

r+ should be int32_t cast not int.
Attachment #496132 - Flags: review?(rreitmai) → review+
(In reply to comment #11)
> Comment on attachment 496132 [details] [diff] [review]
> add a cast to fix compiler warning
> 
> r+ should be int32_t cast not int.

I take back the nit, the cast should be int, to match the type of intval.
changeset: 5645:e2fdf6655530
user:      Brent Baker <brbaker@adobe.com>
summary:   Bug 612439: fix compilation issues with a cast (r=rreitmai)

http://hg.mozilla.org/tamarin-redux/rev/e2fdf6655530
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Flags: flashplayer-bug+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: