Bug 612439: fix compilation issues with a cast (r=rreitmai)